Added bonusPointsBalance for private customer; Initial refactoring;